{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 70,
  "lineage": "f78395a3-10b6-d45f-56cb-d16ef6a9d4fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3bf8848a0fad1d4",
            "association_id": "eipassoc-089dd1437784e96be",
            "domain": "vpc",
            "id": "eipalloc-0b3bf8848a0fad1d4",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0aae6ee34a75c010e",
            "private_dns": "ip-10-1-4-160.eu-west-2.compute.internal",
            "private_ip": "10.1.4.160",
            "public_dns": "ec2-18-130-50-204.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.50.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07650ecb0de9bd731",
            "arn": "arn:aws:ec2:eu-west-2:215644665450:instance/i-0b9655c0763fce399",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9655c0763fce399",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3dffe157f27816a",
            "private_dns": "ip-10-1-0-161.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c683c9185b09e54",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0af77a7e72c39238b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adccc33ea5423cba",
            "tags": {
              "Description": "Terraform-created EC2 instance 1",
              "Name": "EC2 Instance 1"
            },
            "tags_all": {
              "Description": "Terraform-created EC2 instance 1",
              "Name": "EC2 Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af77a7e72c39238b"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07650ecb0de9bd731",
            "arn": "arn:aws:ec2:eu-west-2:215644665450:instance/i-0fe20434c54719a88",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe20434c54719a88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0773b16ef0a9df63c",
            "private_dns": "ip-10-1-1-202.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0097dfd908e196edf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0af77a7e72c39238b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057346edf7fb21cd2",
            "tags": {
              "Description": "Terraform-created EC2 instance 2",
              "Name": "EC2 Instance 2"
            },
            "tags_all": {
              "Description": "Terraform-created EC2 instance 2",
              "Name": "EC2 Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af77a7e72c39238b"
            ]
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:internet-gateway/igw-0d84b2a150cf5e7d9",
            "id": "igw-0d84b2a150cf5e7d9",
            "owner_id": "215644665450",
            "tags": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:loadbalancer/app/cint-loadbalancer/4c134f0a4ea49e75",
            "arn_suffix": "app/cint-loadbalancer/4c134f0a4ea49e75",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cint-loadbalancer-1987688269.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:loadbalancer/app/cint-loadbalancer/4c134f0a4ea49e75",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cint-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b10f627c8309f33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020dcd07619f4e1bc"
              },
              {
                "subnet_id": "subnet-0c77a8eeca7cdd2fc"
              }
            ],
            "subnets": [
              "subnet-020dcd07619f4e1bc",
              "subnet-0c77a8eeca7cdd2fc"
            ],
            "tags": {
              "Name": "cint_ALB"
            },
            "tags_all": {
              "Name": "cint_ALB"
            },
            "vpc_id": "vpc-04e76fa023a122632",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.loadBalancer",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783",
            "arn_suffix": "targetgroup/alb-targetgroup/622948b1a3ec2783",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783-20230619135249941400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783",
            "target_id": "i-0b9655c0763fce399"
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_lb_target_group.targetGroup",
            "aws_security_group.app_sg",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783-20230619135249996100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:215644665450:targetgroup/alb-targetgroup/622948b1a3ec2783",
            "target_id": "i-0fe20434c54719a88"
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_lb_target_group.targetGroup",
            "aws_security_group.app_sg",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3bf8848a0fad1d4",
            "association_id": "eipassoc-089dd1437784e96be",
            "connectivity_type": "public",
            "id": "nat-09ab6ebc519ba7dd1",
            "network_interface_id": "eni-0aae6ee34a75c010e",
            "private_ip": "10.1.4.160",
            "public_ip": "18.130.50.204",
            "subnet_id": "subnet-020dcd07619f4e1bc",
            "tags": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:route-table/rtb-0eb5ab52f837c91dc",
            "id": "rtb-0eb5ab52f837c91dc",
            "owner_id": "215644665450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ab6ebc519ba7dd1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "cint-code-test"
            },
            "tags_all": {
              "project": "cint-code-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:route-table/rtb-08088d487d8d89b50",
            "id": "rtb-08088d487d8d89b50",
            "owner_id": "215644665450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d84b2a150cf5e7d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "cint-code-test"
            },
            "tags_all": {
              "project": "cint-code-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3e73d399522b89",
            "route_table_id": "rtb-0eb5ab52f837c91dc",
            "subnet_id": "subnet-0adccc33ea5423cba"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aa37062c621b551",
            "route_table_id": "rtb-0eb5ab52f837c91dc",
            "subnet_id": "subnet-057346edf7fb21cd2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4f36a38cf2bd8f7",
            "route_table_id": "rtb-0eb5ab52f837c91dc",
            "subnet_id": "subnet-07c7d1c982bd96ab1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022d75c31a7ecbadf",
            "route_table_id": "rtb-08088d487d8d89b50",
            "subnet_id": "subnet-020dcd07619f4e1bc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5c7939fcd9cfd81",
            "route_table_id": "rtb-08088d487d8d89b50",
            "subnet_id": "subnet-0c77a8eeca7cdd2fc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0503e4ca4872bb54d",
            "route_table_id": "rtb-08088d487d8d89b50",
            "subnet_id": "subnet-04c042d49fdb00247"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:security-group/sg-0af77a7e72c39238b",
            "description": "Security group for the application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af77a7e72c39238b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b10f627c8309f33"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b10f627c8309f33"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "215644665450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_SG"
            },
            "tags_all": {
              "Name": "EC2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.loadBalancer",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:security-group/sg-04b10f627c8309f33",
            "description": "Allow TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b10f627c8309f33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Loadbalancer-sg",
            "name_prefix": "",
            "owner_id": "215644665450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB_SG"
            },
            "tags_all": {
              "Name": "ALB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:security-group/sg-0cab877cc96fac42c",
            "description": "Security group for the rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cab877cc96fac42c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.161/32",
                  "10.1.1.202/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.1.0.161/32",
                  "10.1.1.202/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "215644665450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_SG"
            },
            "tags_all": {
              "Name": "RDS_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_security_group.app_sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-0adccc33ea5423cba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adccc33ea5423cba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-private-0",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-private-0",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-057346edf7fb21cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057346edf7fb21cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-private-1",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-private-1",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-07c7d1c982bd96ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c7d1c982bd96ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-private-2",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-private-2",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-020dcd07619f4e1bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020dcd07619f4e1bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-public-0",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-public-0",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-0c77a8eeca7cdd2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c77a8eeca7cdd2fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-public-1",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-public-1",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:subnet/subnet-04c042d49fdb00247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c042d49fdb00247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215644665450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cint-code-test-public-2",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test-public-2",
              "project": "cint-code-test"
            },
            "vpc_id": "vpc-04e76fa023a122632"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215644665450:vpc/vpc-04e76fa023a122632",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b8bcb82a9730618e",
            "default_route_table_id": "rtb-006dfaf895d16dc19",
            "default_security_group_id": "sg-0be030341991ec584",
            "dhcp_options_id": "dopt-086fc955219639141",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e76fa023a122632",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006dfaf895d16dc19",
            "owner_id": "215644665450",
            "tags": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            },
            "tags_all": {
              "Name": "cint-code-test",
              "project": "cint-code-test"
            }
          }
        }
      ]
    }
  ]
}